added more styling/routes

--- a/app/assets/stylesheets/index_page.scss
+++ b/app/assets/stylesheets/index_page.scss
@@ -2,14 +2,17 @@
 
 .top-bar {
   color:white;
-  font-family: Arial;
+  font-family: Helvetica;
+  background-color:white;
+
+
   // border-bottom: 1px solid black;
-height: 8em;
+height: 6em;
 background-color: white;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: Arial
+  font-family: Helvetica
 }
 
 
@@ -20,18 +23,29 @@ h1, h2, h3, h4, h5, h6 {
   right: 0;
 }
 .menu-icon {
-  height: 6em;
+  height: 7em;
   width: auto;
 }
 
 .main-icon {
-  height: 50;
-  width: auto;
+  width: 100%;
+  height: auto;
 }
 
 
 .button {
-  margin: 0;
+  margin: 1;
   opacity: 2.85;
   padding-top: 1em;
+  padding-bottom: 1em;
+}
+
+// .breadcrumbs {
+//   background-color:white;
+//   font-size: 18px;
+//
+// }
+
+.sticky sticky-topbar {
+  background-color:white;
 }
