--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -55,3 +55,10 @@
 .top-bar-container {
   background-color:white;
 }
+
+.top-bar {
+    background-color:fuchsia;
+  }
+// .breadcrumbs {
+//   font-size: 1em;
+// }
