--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,15 +30,12 @@
           <div class="top-bar-right">
             <ul class="menu">
               <% if current_user %>
-                <li class="menu-text"><%= "#{current_user.username}" %></li>
+                <li class="menu-text"><%= "#{current_user.email}" %></li>
                 <li class="menu-text"><%= link_to "Profile", user_path(current_user) %></li>
                 <li class="menu-text"><%= link_to 'Sign out', destroy_user_session_path, method: "delete" %></li>
               <% else %>
                 <li><%= link_to 'Create Account', new_user_registration_path, class: "button" %></li>
                 <li><%= link_to 'Sign in', new_user_session_path, class: "button" %></li>
-              <% end %>
-              <% if current_user && current_user.admin? %>
-                <li><%= link_to 'User Admin', users_path %></li>
               <% end %>
 
 
@@ -49,8 +46,6 @@
         </div>
       </div>
     </div>
-
-
 
     <%= yield %>
 
