added the submit beer form

--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -3,6 +3,16 @@
   <div class="beer-description">
     <h3>Description: <%= @beer.description %></h3>
   </div>
+  <div class="beer-brewery">
+    <h3>Brewery: <%= @beer.brewery %></h3>
+  </div>
+  <div class="beer-style">
+    <h3>Style: <%= @beer.style %></h3>
+  </div>
+  <div class="beer-url">
+    <h3>Url: <%= @beer.url %></h3>
+  </div>
+
 
 </div>
 
