--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -11,6 +11,50 @@
   </div>
 </div>
 
+<h1>Submit a new Beer</h1>
+<%= form_for [@beer] do |f| %>
+  <% if @beer.errors.present? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@beer.errors.count, "error") %> prohibited this category from being saved:</h2>
+
+      <ul>
+      <% @beer.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class='field'>
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+  </div>
+
+  <div class='field'>
+    <%= f.label :description %>
+    <%= f.text_field :description %>
+  </div>
+
+  <div class='field'>
+    <%= f.label :brewery %>
+    <%= f.text_field :brewery %>
+  </div>
+
+  <div class='field'>
+    <%= f.label :style %>
+    <%= f.text_field :style %>
+  </div>
+
+  <div class='field'>
+    <%= f.label :url %>
+    <%= f.text_field :url%>
+  </div>
+
+  <div class='field'>
+    <%= f.submit value="Add this Beer to the List" %>
+  </div>
+
+<% end %>
 
 
 <!-- <div class="row">
