--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,6 +1,3 @@
-<h1 class="mybeerguide-title">My Beer Guide</h1>
-
-
 <div class="beer_list_header">
   <h2>Beer List:</h2>
   <div class="beer-list small-9 columns small-centered large-10">
@@ -11,9 +8,10 @@
   </div>
 </div>
 
-<h1>Submit a new Beer</h1>
-<%= form_for [@beer] do |f| %>
-  <% if @beer.errors.present? %>
+<div class="submit_beer">
+  <div class="submit_beer-title"><h3>Submit a New Beer</h3></div>
+    <%= form_for [@beer] do |f| %>
+        <% if @beer.errors.present? %>
     <div id="error_explanation">
       <h2><%= pluralize(@beer.errors.count, "error") %> prohibited this category from being saved:</h2>
 
@@ -53,7 +51,7 @@
   <div class='field'>
     <%= f.submit value="Add this Beer to the List" %>
   </div>
-
+</div>
 <% end %>
 
 
