fixed layout and forms

--- a/app/views/beers/home.html.erb
+++ b/app/views/beers/home.html.erb
@@ -1,4 +1,4 @@
 <html>
-  <div class="row index-row small-up-2 medium-up-3 large-up-4">
-    <%= image_tag("beers.jpeg", class: "main-icon") %>
+  <div class="updown">
+    <%= image_tag("rsz_craft.jpeg", class: "body.home") %>
 </html>
