--- a/app/assets/stylesheets/index_page.scss
+++ b/app/assets/stylesheets/index_page.scss
@@ -1,20 +1,37 @@
 @import 'settings';
 
+
+body.home {
+  background-image: url("rsz_craft.jpg");
+
+}
+
+
+.updown {
+  
+    margin-right: auto;
+    margin-left: auto;
+}
+
+form {
+  position:center;
+ }
+
 .top-bar {
   color:white;
   font-family: Helvetica;
-  background-color:white;
-
-
-  // border-bottom: 1px solid black;
+ border-bottom: 1px solid black;
 height: 6em;
-background-color: white;
+background-color: black;
 }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: Helvetica
 }
 
+.submit_beer {
+  position: center;
+}
 
 .overlay-container .overlay {
   position: absolute; //css only works with this here
@@ -23,7 +40,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 0;
 }
 .menu-icon {
-  height: 7em;
+  height: 9em;
   width: auto;
 }
 
@@ -51,25 +68,28 @@ h1, h2, h3, h4, h5, h6 {
   background-color:white;
 }
 
-.beer_list_header {
-  text-align: center;
-}
+
 
 .submit_beer {
+
+  align-content: center;
   color:#C63C22;
-  width: 320px;
-  padding: 20px;
+  // width: 820px;
+  padding: 120px;
   border: 5px gray;
   margin: 3;
   text-align:center;
+
 }
 
 .submit_beer-title {
   text-align: center;
+  display:inline-block;
+  color:#C63C22;
 }
 
 .mybeerguide-title {
-    text-align: center;
+    text-align: right;
 }
 
 .top-bar-container {
@@ -79,4 +99,13 @@ h1, h2, h3, h4, h5, h6 {
 
 .small-9 {
   border: 9px;
+}
+
+.card {
+  text-align:center;
+}
+
+.beer_list_header {
+  color:#C63C22;
+  text-align: center;
 }
