--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,8 @@
             <% end %>
           </div>
           <div class="top-bar-left"></div>
+          <ul class="menu">
+            
           <div class="top-bar-right">
             <ul class="menu">
               <% if current_user %>
