--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -3,6 +3,7 @@
 
   <div class="row">
       <div class="large-12 columns">
+          <div class="row">
 
         <div class="card">
 <div class="submit_beer-title">
@@ -49,6 +50,7 @@
     <%= f.submit value="Add this Beer to the List" %>
   </div>
 </div>
+
 <% end %>
 
 
