--- a/app/assets/stylesheets/index_page.scss
+++ b/app/assets/stylesheets/index_page.scss
@@ -1,13 +1,49 @@
 @import 'settings';
 
 
+
+.prueba {
+  color:#C63C22;
+  font-weight: bold;
+}
+
 body.home {
   background-image: url("rsz_craft.jpg");
 
 }
 
 
+//
+#prueba {
+  border-style:solid;
+  border-width:0.2px;
+  column-count: 2;
+  position:center;
+  color:black;
+  font-size: 16px;
+  border-bottom-width: 1px;
+  padding: 15px;
+}
 
+.review {
+    color:#C63C22;
+    text-align: center;
+    font-weight: bold;
+
+
+}
+
+.beer {
+
+      color:#C63C22;
+      text-align: center;
+      font-weight: bold;
+
+
+}
+#beer-url {
+   border-bottom-width: 5px;
+}
 
 .updown {
 
@@ -88,10 +124,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .submit_beer-title {
-
+  font-weight: bold;
   text-align: center;
-  display:inline-block;
   color:#C63C22;
+
 }
 
 .mybeerguide-title {
@@ -107,8 +143,40 @@ h1, h2, h3, h4, h5, h6 {
   border: 9px;
 }
 
-.card {
+.beername {
+  font-weight: bold;
+  color:#1779BA;
+
+
+}
+
+
+.carta {
   text-align:center;
+  border-style:solid;
+  border-width:0.5px;
+  column-count: 2;
+  position:center;
+  color:black;
+  font-size: 16px;
+  border-bottom-width: 1px;
+  padding: 15px;
+
+
+}
+
+.cartota {
+  text-align:center;
+  border-style:solid;
+  border-width:0.5px;
+  column-count: 2;
+  position:center;
+  color:black;
+  font-size: 16px;
+  border-bottom-width: 1px;
+  padding: 15px;
+  display: inline-block;
+
 }
 
 .beer_list_header {
@@ -118,4 +186,9 @@ h1, h2, h3, h4, h5, h6 {
 
 .beer-details {
   align-content: center;
+}
+
+.card {
+  text-align: center;
+  padding: 18px;
 }
