--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,9 @@
 
 <div class="row">
     <div class="large-12 columns">
-      <div class="row">
+      <div class="prueba">
 
-        <h3> Favorites</h3>
+      <h3> Favorites</h3>
             <% @favorites.each do |favorite| %>
 
             <ul>
