--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,22 +1,25 @@
-
+<div class= "madera">
 <div class="row">
     <div class="large-12 columns">
-      <div class="prueba">
 
-      <h3> Favorites</h3>
+
+      <div class="fridgetitle"><h3> My Fridge</h3>
+      <div class="card">
             <% @favorites.each do |favorite| %>
 
-            <ul>
+
 
               <li>
                 <%= link_to favorite.beer.name, beer_path(favorite.beer) %>
                 |<a class="delete"> <img src="<%= favorite.beer.url %>" width=150 height=150/>
                   <%= link_to "Remove from Fridge", favorite, method: :delete, data: { confirm: "You sure?" } %>
                 </a>
+                <div class= "madera">
 
               </li>
-            </ul>
+
             <% end %>
+            <div class= "madera">
           </div>
         </div>
       </div>
