--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,4 +1,6 @@
+<div class= "madera">
 <div class="row" >
+
 
 
   <div class="row">
@@ -28,7 +30,7 @@
   </div>
 
   <div class='field'>
-    <%= f.label :description %>
+    <%= f.label :description , "When did you try it?"%>
     <%= f.text_field :description %>
   </div>
 
@@ -43,7 +45,7 @@
   </div>
 
   <div class='field'>
-    <%= f.label :url %>
+    <%= f.label :url, "Image URL" %>
     <%= f.text_field :url%>
   </div>
 
