--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -51,3 +51,11 @@
 //
 // @include motion-ui-transitions;
 // @include motion-ui-animations;
+
+html {
+  background-image: url("wooden.jpg");
+}
+
+body {
+  background-color: inherit;
+}
