--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,13 +1,20 @@
 <div class= "madera">
 <div class="row" >
+</div>
 
 
 
   <div class="row">
-      <div class="large-12 columns">
+    <div class="row">
+    </div>
+      <div class="row">
+      <div class="large-6 columns"></div>
+    </div>
+
         <div class="submit_beer-title">
           <h3>Submit a New Beer</h3></div>
           <div class="row">
+          </div>
 
         <div class="card">
 
@@ -63,46 +70,9 @@
 <div class="large-12 columns">
 
   <% @beers.each do |beer| %>
-  <a href="beers/<%=beer.id%>"><img src="<%=beer.url%>" width=150 height=150 %></a></p>
+  <a href="beers/<%=beer.id%>"><img src="<%=beer.url%>" width=200 height=200 %></a></p>
 
   <% end %>
 </div>
 </div>
-
-
-
-
-<!-- <div class="row">
-<div class="columns small-4">Hello world</div> <div class= "small-8">Hola mundo</div>
-
-<%= link_to beer.name, beer
-
-</div> -->
-
-<!-- <html>
-  <head>
-  <style>
-  body {
-    background-color: black;
-    font-family:Arial;
-
-
-  }
-  </style>
-</head>
-<body>
-</html>
-
-<div class="contain-to-grid sticky">
-  <nav class="top-bar" data-topbar role="navigation" data-options="sticky_on: large">
-    <h1>My Beer Log</h1>
-  </nav>
 </div>
-
-
-<ul class="breadcrumbs">
-  <li><a href="#">Home</a></li>
-  <li><a href="#">Beers</a></li>
-  <li class="unavailable"><a href="#">Styles</a></li>
-  <li class="current"><a href="#">Breweries</a></li>
-</ul>
