--- a/app/views/beers/home.html.erb
+++ b/app/views/beers/home.html.erb
@@ -1,5 +1,3 @@
-<html>
-  <div class="updown">
-
-    <%= image_tag("rsz_craft.jpeg", class: "body.home") %>
-</html>
+<div class="updown">
+  <%= image_tag("rsz_craft.jpeg", class: "body.home") %>
+</div>
