--- a/app/assets/stylesheets/index_page.scss
+++ b/app/assets/stylesheets/index_page.scss
@@ -1,5 +1,16 @@
 @import 'settings';
 
+.breadcrumbs a {
+  color: #1779BA;
+  font-weight: bold;
+  font-size: 17px;
+  text-align: left;
+  font-family: fantasy;
+}
+
+.card-section {
+  text-align: center;
+}
 
 .forms {
   text-align: center;
