--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,10 @@
     <div class="top-bar-container" data-sticky-container>
       <!-- <div class="sticky sticky-topbar" data-sticky data-options="marginTop:0;" style="width:100%"> -->
         <div class="top-bar">
+
           <div class="top-bar-title">
             <%= link_to root_path do %>
-              <%= image_tag("logo_primary.png", class: "menu-icon") %>
+              <%= image_tag("newlogo1.png", class: "menu-icon") %>
               <nav class="breadcrumbs">
             <a href="/beers">List of Beers •</a>
             <% if current_user %>
@@ -26,11 +27,13 @@
 
 
 
+
             </nav>
             <% end %>
           </div>
           <div class="top-bar-left"></div>
           <ul class="menu">
+
 
           <div class="top-bar-right">
             <ul class="menu">
