fixed directory path for ShowFormContainer

--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -70,7 +70,7 @@
 <div class="large-12 columns">
 
   <% @beers.each do |beer| %>
-  <a href="beers/<%=beer.id%>"><img src="<%=beer.url%>" width=200 height=200 %></a></p>
+  <a href="beers/<%=beer.id%>"><img src="<%=beer.url%>" width=450 height=450 /></a>
 
   <% end %>
 </div>
